# churnstream

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: aws-oidc-test.yml  tests.yml
artifacts/: model_metadata.json
scripts/: 003_check_feature_engineering.py  004_check_preprocessing.py  005_train.py  006.export_champion_model.py  007_check_inference.py  check_mongodb_connection.py  validate_data.py
src/churnstream/api/: main.py  services.py
src/churnstream/core/: config.py
src/churnstream/data/: loader.py  validator.py
src/churnstream/database/: mongodb.py
src/churnstream/features/: config.py  engineering.py
src/churnstream/preprocess/: preprocessing.py
src/churnstream/schemas/: data_schemas.py
src/churnstream/training/: mlflow_tracker.py  models.py  train.py
tests/: conftest.py  test_api.py  test_services.py
