[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "churnstream"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pydantic",
    "pydantic_settings",
    "pymongo[srv]",
    "pandas",
    "scikit-learn",
    "fastapi",
    "uvicorn[standard]",
    "joblib",
]

[project.optional-dependencies]

training = [
    "mlflow"
]

dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88